tests/negative/return_type.sp
// EXPECT: E3004
int get() {
    return "not an int";
}
int main() { return get(); }
